@@ -1,14 +1,13 @@
 package org.lbcc.bms.bms_monolith.eventservice.dto;
 
-import lombok.AllArgsConstructor;
-import lombok.Data;
+import lombok.Builder;
+import lombok.Getter;
 import org.lbcc.bms.bms_monolith.common.entity.Event;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Data
-@AllArgsConstructor
+@Getter
+@Builder
 public class EventResponse {
 
     private String id;
@@ -31,10 +30,10 @@ public class EventResponse {
                 event.getVenue() != null ? event.getVenue().getName() : null,
                 event.getShow() != null ? event.getShow().stream()
                         .map(EventShowResponse::fromEntity)
-                        .collect(Collectors.toList()) : null,
+                        .toList() : null,
                 event.getEventType() != null ? event.getEventType().getLabel() : null,
-                event.getStartDate().toString(),
-                event.getEndDate().toString(),
+                event.getStartDate() != null ? event.getStartDate().toString() : null,
+                event.getEndDate() != null ? event.getEndDate().toString() : null,
                 event.getThumbnailUrl()
         );
     }
