@@ -2,15 +2,16 @@ package org.lbcc.bms.bms_monolith.eventservice.dto;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.Getter;
 import org.lbcc.bms.bms_monolith.common.entity.EventShow;
 import org.lbcc.bms.bms_monolith.eventservice.dto.seat.SeatInShowResponse;
 import org.lbcc.bms.bms_monolith.eventservice.dto.seat.SeatTypeInShowResponse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
+@Getter
 public class EventShowResponse {
 
     private List<String> genres;
@@ -25,18 +26,16 @@ public class EventShowResponse {
         return new EventShowResponse(
                 show.getGenres() != null ? show.getGenres().stream()
                         .map(Enum::name)
-                        .collect(Collectors.toList()) : null,
+                        .toList() : null,
                 show.getStartDate().toString(),
                 show.getEndDate().toString(),
                 show.getSeatInShows() != null ? show.getSeatInShows().stream()
                         .map(SeatInShowResponse::fromEntity)
-                        .collect(Collectors.toList()) : null,
+                        .toList() : null,
                 show.getSeatTypeInShows() != null ? show.getSeatTypeInShows().stream()
                         .map(SeatTypeInShowResponse::fromEntity)
-                        .collect(Collectors.toList()) : null
+                        .toList() : null
         );
     }
-
-    // Additional utility methods if needed
 }
 
